# SimpleBVH

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: continuous.yml
cmake/: EBWDependencies.cmake  EBWDownloadExternal.cmake
cmake/simple_bvh/: simple_bvh_warnings.cmake
src/: BVH.cpp  BVH.hpp  Morton.cpp
src/SimpleBVH/: BVH.cpp  BVH.hpp  Morton.cpp  Morton.hpp
tests/: CMakeLists.txt  tests.cpp
